--- a/StockService/StockService.csproj
+++ b/StockService/StockService.csproj
@@ -2,26 +2,20 @@
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
-        <Nullable>disable</Nullable>
+        <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>Orders.Saga</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
         <PackageReference Include="MassTransit.RabbitMQ" Version="7.3.1" />
         <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Orders.Saga.Contracts\Orders.Saga.Contracts.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Folder Include="Consumers" />
+      <Folder Include="Handlers" />
     </ItemGroup>
 
 </Project>
