--- a/StockService/appsettings.Development.json
+++ b/StockService/appsettings.Development.json
@@ -1,9 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": {
-      "connectionString": "Host=localhost;Port=5432;Uid=postgres;Password=postgres",
-      "Database": "saga_stock"
-    }
+    "PostgresConnection": "Host=localhost;Port=5432;Database=saga_stock;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
