--- a/PaymentService/appsettings.Development.json
+++ b/PaymentService/appsettings.Development.json
@@ -1,9 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": {
-      "connectionString": "Host=localhost;Port=5432;Uid=postgres;Password=postgres",
-      "Database": "saga_payment"
-    }
+    "PostgresConnection": "Host=localhost;Port=5432;Database=saga_payment;Username=postgres;Password=postgres;"
   },
   "Logging": {
     "LogLevel": {
