--- a/OrdersService/appsettings.Development.json
+++ b/OrdersService/appsettings.Development.json
@@ -2,10 +2,21 @@
   "ConnectionStrings": {
     "PostgresConnection": "Host=localhost;Port=5432;Database=saga_orders;Username=postgres;Password=postgres;"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+    "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
+    "MinimumLevel": "Debug",
+    "Override": {
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft": "Warning",
+      "System": "Warning"
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "Seq", "Args": { "serverUrl": "http://localhost:5341" } }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Orders.Saga"
+    }    
   }
 }
