--- a/OrderService.Tests/OrderService.Tests.csproj
+++ b/OrderService.Tests/OrderService.Tests.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MassTransit.Quartz" Version="8.0.1" />
         <PackageReference Include="MassTransit.TestFramework" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
         <PackageReference Include="Shouldly" Version="4.0.3" />
