--- a/OrdersService/appsettings.Development.json
+++ b/OrdersService/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=5432;Database=saga_orders;Username=postgres;Password=postgres;"
+    "PostgresConnection": "Host=localhost;Port=5432;Database=saga_orders;Username=postgres;Password=postgres;",
+    "SagaDbConnection": "Host=localhost;Port=5432;Database=saga_order_instance;Username=postgres;Password=postgres;"
   },
   "Serilog": {
     "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
