--- a/OrdersService/appsettings.Development.json
+++ b/OrdersService/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "Host=localhost;Port=5432;Database=saga_orders;Username=postgres;Password=postgres;",
-    "SagaDbConnection": "Host=localhost;Port=5432;Database=saga_order_instance;Username=postgres;Password=postgres;"
+    "PostgresConnection": "Host=localhost;Port=5432;Database=saga_orders;Username=postgres;Password=postgres;"    
   },
   "Serilog": {
     "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.Seq" ],
@@ -17,7 +16,8 @@
     ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
-      "Application": "Orders.Saga"
+      "Application": "Orders.Saga",
+      "Service": "Orders"
     }    
   }
 }
